force-app/main/default/objects/VisualAntidote__Submission__c/VisualAntidote__Submission__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>