force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Context_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Context_Type__c</fullName>
    <label>Context Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>