force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Document_Ids__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Document_Ids__c</fullName>
    <label>Document Ids</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>