force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__E_Sign__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__E_Sign__c</fullName>
    <label>E-Sign</label>
    <length>200</length>
    <type>Text</type>
</CustomField>