force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Form__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>