force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Objects__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Objects__c</fullName>
    <label>Objects</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>