force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Primary_Object__c</fullName>
    <label>Primary Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>