force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Status__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>StagingReady</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>