force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Submitted_Data_XML2__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Submitted_Data_XML2__c</fullName>
    <label>Submitted Data XML2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>