force-app/main/default/objects/VisualAntidote__Submission__c/fields/VisualAntidote__Verification_Emails__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Verification_Emails__c</fullName>
    <label>Verification Emails</label>
    <type>TextArea</type>
</CustomField>