force-app/main/default/objects/VisualAntidote__Submission__c/listViews/VisualAntidote__All.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All</fullName>
    <columns>NAME</columns>
    <columns>VisualAntidote__Submission_Date__c</columns>
    <columns>VisualAntidote__Objects_XML__c</columns>
    <columns>VisualAntidote__Status__c</columns>
    <columns>VisualAntidote__E_Sign__c</columns>
    <columns>VisualAntidote__Form__c</columns>
    <columns>VisualAntidote__User_Content_ID__c</columns>
    <columns>VisualAntidote__Objects__c</columns>
    <columns>VisualAntidote__Primary_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>