force-app/main/default/objects/VisualAntidote__Submission__c/listViews/VisualAntidote__Custom_Submission_View.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__Custom_Submission_View</fullName>
    <columns>NAME</columns>
    <columns>VisualAntidote__Form__c</columns>
    <columns>VisualAntidote__Objects__c</columns>
    <columns>VisualAntidote__Objects_XML__c</columns>
    <columns>VisualAntidote__Primary_Object__c</columns>
    <columns>VisualAntidote__Submission_Date__c</columns>
    <columns>VisualAntidote__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom Submission View</label>
</ListView>