force-app/main/default/objects/VisualAntidote__Submission__c/listViews/VisualAntidote__Native_Submissions_View.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__Native_Submissions_View</fullName>
    <columns>NAME</columns>
    <columns>VisualAntidote__Form__c</columns>
    <columns>VisualAntidote__Objects__c</columns>
    <columns>VisualAntidote__Objects_XML__c</columns>
    <columns>VisualAntidote__Primary_Object__c</columns>
    <columns>VisualAntidote__Submission_Date__c</columns>
    <columns>VisualAntidote__Status__c</columns>
    <columns>VisualAntidote__Is_Native__c</columns>
    <columns>VisualAntidote__Document_Ids__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VisualAntidote__Is_Native__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Native Submissions View</label>
</ListView>